--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/validator": "6.4.x-dev",
         "symfony/yaml": "6.4.x-dev",
         "symfonycasts/tailwind-bundle": "dev-main",
+        "tales-from-a-dev/flowbite-bundle": "dev-main",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
