--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,8 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: 
+    # form_themes: ['']
+        - '@TalesFromADevFlowbite/form/default.html.twig'
 
 when@test:
     twig:
