--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -24,7 +24,7 @@ services:
 ###< symfony/mercure-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-  # database:
-  #   ports:
-  #     - "5432"
+  database:
+    ports:
+      - "5432"
 ###< doctrine/doctrine-bundle ###
